# qca_spectral_scan

./: .editorconfig  .gitignore  LICENSE  README.md  build-libnl.sh  build.gradle  deps.sh  settings.gradle
.github/workflows/: debug_build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  spectral-plot.c  spectral-scan.c
app/src/main/java/com/example/softsa/: SoftSA.java
app/src/main/java/com/example/spectral_plot/: SpectralPlot.java
app/src/main/res/values/: strings.xml
